[package]
name = "asyncembedded2022"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.3", features = ["derive"] }
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.18.0", features = ["rustls"] }
url = "2.3.1"